--- a/config/mainwindow5.ui
+++ b/config/mainwindow5.ui
@@ -174,6 +174,12 @@ p, li { white-space: pre-wrap; }
     </item>
     <item row="0" column="0" rowspan="3">
      <widget class="QTabWidget" name="propertiesWindow">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="minimumSize">
        <size>
         <width>383</width>
@@ -191,7 +197,7 @@ p, li { white-space: pre-wrap; }
       </property>
       <widget class="QWidget" name="setupSettingsTab">
        <attribute name="title">
-        <string>Plato Setup</string>
+        <string>Setup</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_7">
         <item row="0" column="0">
@@ -202,11 +208,17 @@ p, li { white-space: pre-wrap; }
             <height>0</height>
            </size>
           </property>
+          <property name="maximumSize">
+           <size>
+            <width>359</width>
+            <height>16777215</height>
+           </size>
+          </property>
           <property name="sizeAdjustPolicy">
-           <enum>QAbstractScrollArea::AdjustToContents</enum>
+           <enum>QAbstractScrollArea::AdjustIgnored</enum>
           </property>
           <property name="widgetResizable">
-           <bool>true</bool>
+           <bool>false</bool>
           </property>
           <widget class="QWidget" name="scrollAreaWidgetContents">
            <property name="geometry">
@@ -218,14 +230,44 @@ p, li { white-space: pre-wrap; }
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout_6">
-            <item row="6" column="0">
+            <item row="2" column="0" colspan="3">
+             <widget class="Line" name="line">
+              <property name="autoFillBackground">
+               <bool>false</bool>
+              </property>
+              <property name="frameShadow">
+               <enum>QFrame::Raised</enum>
+              </property>
+              <property name="lineWidth">
+               <number>5</number>
+              </property>
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+             </widget>
+            </item>
+            <item row="17" column="1">
+             <widget class="QLineEdit" name="gammaLineEdit2">
+              <property name="text">
+               <string>0.1</string>
+              </property>
+             </widget>
+            </item>
+            <item row="17" column="0">
+             <widget class="QLabel" name="label_48">
+              <property name="text">
+               <string>Gamma</string>
+              </property>
+             </widget>
+            </item>
+            <item row="8" column="0">
              <widget class="QLabel" name="label_47">
               <property name="text">
                <string>Gamma:</string>
               </property>
              </widget>
             </item>
-            <item row="6" column="1">
+            <item row="8" column="1">
              <widget class="QLineEdit" name="gammaLineEdit">
               <property name="autoFillBackground">
                <bool>false</bool>
@@ -242,7 +284,7 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="2" column="0" colspan="2">
+            <item row="3" column="0" colspan="2">
              <widget class="QLabel" name="label_3">
               <property name="text">
                <string>Generate and execute Plato input file:</string>
@@ -252,14 +294,14 @@ p, li { white-space: pre-wrap; }
             <item row="1" column="0" colspan="2">
              <widget class="QLineEdit" name="openFileLineEdit"/>
             </item>
-            <item row="3" column="0" colspan="2">
+            <item row="4" column="0" colspan="2">
              <widget class="QPushButton" name="generateInputFileButton">
               <property name="text">
                <string>Generate Input File</string>
               </property>
              </widget>
             </item>
-            <item row="4" column="0" colspan="2">
+            <item row="5" column="0" colspan="2">
              <widget class="QPushButton" name="executeButton">
               <property name="enabled">
                <bool>false</bool>
@@ -269,28 +311,31 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="5" column="0" colspan="3">
+            <item row="7" column="0" colspan="3">
              <widget class="QLabel" name="label_34">
               <property name="text">
                <string>Generate transmission input file and calculate transmission:</string>
               </property>
+              <property name="alignment">
+               <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+              </property>
              </widget>
             </item>
-            <item row="9" column="0" colspan="3">
+            <item row="12" column="0" colspan="3">
              <widget class="QLabel" name="label_35">
               <property name="text">
                <string>Generate current input file and calculate current:</string>
               </property>
              </widget>
             </item>
-            <item row="7" column="0" colspan="2">
+            <item row="9" column="0" colspan="2">
              <widget class="QPushButton" name="generateTransInputFileButton">
               <property name="text">
                <string>Generate Transmission Input File</string>
               </property>
              </widget>
             </item>
-            <item row="8" column="0" colspan="2">
+            <item row="10" column="0" colspan="2">
              <widget class="QPushButton" name="executeTransButton">
               <property name="enabled">
                <bool>false</bool>
@@ -307,49 +352,49 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="10" column="0" colspan="2">
+            <item row="13" column="0" colspan="2">
              <widget class="QPushButton" name="generateCurrInputFileButton">
               <property name="text">
                <string>Generate Current Input File</string>
               </property>
              </widget>
             </item>
-            <item row="15" column="0">
+            <item row="19" column="0">
              <widget class="QLabel" name="label_44">
               <property name="text">
                <string>Bias (eV) from 0 to:</string>
               </property>
              </widget>
             </item>
-            <item row="15" column="1">
+            <item row="19" column="1">
              <widget class="QLineEdit" name="biasLineEdit">
               <property name="text">
                <string>1</string>
               </property>
              </widget>
             </item>
-            <item row="16" column="1">
+            <item row="20" column="1">
              <widget class="QLineEdit" name="stepsLineEdit">
               <property name="text">
                <string>5</string>
               </property>
              </widget>
             </item>
-            <item row="17" column="0" colspan="2">
+            <item row="21" column="0" colspan="2">
              <widget class="QPushButton" name="executeCurrGraphButton">
               <property name="text">
                <string>Plot current vs. bias</string>
               </property>
              </widget>
             </item>
-            <item row="12" column="0" colspan="2">
+            <item row="16" column="0" colspan="2">
              <widget class="QLabel" name="label_33">
               <property name="text">
                <string>Generate current vs. bias graph:</string>
               </property>
              </widget>
             </item>
-            <item row="11" column="0" colspan="2">
+            <item row="14" column="0" colspan="2">
              <widget class="QPushButton" name="executeCurrButton">
               <property name="enabled">
                <bool>false</bool>
@@ -359,52 +404,90 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="18" column="0" colspan="2">
+            <item row="23" column="0" colspan="2">
              <widget class="QLabel" name="label_4">
               <property name="text">
                <string>View and / or edit Plato input files:</string>
               </property>
              </widget>
             </item>
-            <item row="14" column="1">
+            <item row="18" column="1">
              <widget class="QLineEdit" name="referenceLineEdit">
               <property name="text">
                <string>0</string>
               </property>
              </widget>
             </item>
-            <item row="19" column="0" colspan="2">
+            <item row="24" column="0" colspan="2">
              <widget class="QPushButton" name="switchToInputFileTabButton">
               <property name="text">
                <string>Switch to Input File tab</string>
               </property>
              </widget>
             </item>
-            <item row="16" column="0">
+            <item row="20" column="0">
              <widget class="QLabel" name="label_45">
               <property name="text">
                <string>Steps</string>
               </property>
              </widget>
             </item>
-            <item row="14" column="0">
+            <item row="18" column="0">
              <widget class="QLabel" name="label_37">
               <property name="text">
                <string>Reference Potential (eV)</string>
               </property>
              </widget>
             </item>
-            <item row="13" column="0">
-             <widget class="QLabel" name="label_48">
-              <property name="text">
-               <string>Gamma</string>
+            <item row="15" column="0" colspan="3">
+             <widget class="Line" name="line_4">
+              <property name="frameShadow">
+               <enum>QFrame::Raised</enum>
+              </property>
+              <property name="lineWidth">
+               <number>5</number>
+              </property>
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
               </property>
              </widget>
             </item>
-            <item row="13" column="1">
-             <widget class="QLineEdit" name="gammaLineEdit2">
-              <property name="text">
-               <string>0.1</string>
+            <item row="6" column="0" colspan="3">
+             <widget class="Line" name="line_2">
+              <property name="frameShadow">
+               <enum>QFrame::Raised</enum>
+              </property>
+              <property name="lineWidth">
+               <number>5</number>
+              </property>
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+             </widget>
+            </item>
+            <item row="11" column="0" colspan="3">
+             <widget class="Line" name="line_3">
+              <property name="frameShadow">
+               <enum>QFrame::Raised</enum>
+              </property>
+              <property name="lineWidth">
+               <number>5</number>
+              </property>
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+             </widget>
+            </item>
+            <item row="22" column="0" colspan="3">
+             <widget class="Line" name="line_5">
+              <property name="frameShadow">
+               <enum>QFrame::Raised</enum>
+              </property>
+              <property name="lineWidth">
+               <number>5</number>
+              </property>
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
               </property>
              </widget>
             </item>
@@ -423,7 +506,7 @@ p, li { white-space: pre-wrap; }
       </widget>
       <widget class="QWidget" name="loadFilesTab">
        <attribute name="title">
-        <string>Load Files</string>
+        <string>Load</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_16">
         <item row="7" column="1">
@@ -565,7 +648,7 @@ p, li { white-space: pre-wrap; }
       </widget>
       <widget class="QWidget" name="displaySettingsTab">
        <attribute name="title">
-        <string>Display Settings</string>
+        <string>Display</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_8">
         <item row="0" column="0">
@@ -821,7 +904,7 @@ p, li { white-space: pre-wrap; }
       </widget>
       <widget class="QWidget" name="graphSettingsTab">
        <attribute name="title">
-        <string>Graph Settings</string>
+        <string>Graph</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_10">
         <item row="0" column="0">
@@ -1306,7 +1389,7 @@ p, li { white-space: pre-wrap; }
       </widget>
       <widget class="QWidget" name="atomSettingsTab">
        <attribute name="title">
-        <string>Atoms and Bonds</string>
+        <string>Atoms</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_14">
         <item row="0" column="0">
