--- a/config/mainwindow5.ui
+++ b/config/mainwindow5.ui
@@ -271,30 +271,13 @@ p, li { white-space: pre-wrap; }
           <widget class="QWidget" name="scrollAreaWidgetContents">
            <property name="geometry">
             <rect>
-             <x>0</x>
+             <x>-1</x>
              <y>0</y>
              <width>357</width>
              <height>818</height>
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout_6">
-            <item row="0" column="0" colspan="2">
-             <widget class="QLabel" name="label">
-              <property name="text">
-               <string>Select or enter path of .xyz file:</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="0" colspan="2">
-             <widget class="QLineEdit" name="openFileLineEdit"/>
-            </item>
-            <item row="1" column="2">
-             <widget class="QPushButton" name="openFileButton">
-              <property name="text">
-               <string>Open</string>
-              </property>
-             </widget>
-            </item>
             <item row="2" column="0">
              <spacer name="verticalSpacer_22">
               <property name="orientation">
@@ -311,6 +294,23 @@ p, li { white-space: pre-wrap; }
               </property>
              </spacer>
             </item>
+            <item row="0" column="0" colspan="2">
+             <widget class="QLabel" name="label">
+              <property name="text">
+               <string>Select or enter path of .xyz file:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="2">
+             <widget class="QPushButton" name="openFileButton">
+              <property name="text">
+               <string>Open</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="0" colspan="2">
+             <widget class="QLineEdit" name="openFileLineEdit"/>
+            </item>
             <item row="3" column="0" colspan="3">
              <widget class="Line" name="line">
               <property name="autoFillBackground">
@@ -324,13 +324,6 @@ p, li { white-space: pre-wrap; }
               </property>
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
-              </property>
-             </widget>
-            </item>
-            <item row="4" column="0" colspan="2">
-             <widget class="QLabel" name="label_3">
-              <property name="text">
-               <string>Generate and execute Plato input file:</string>
               </property>
              </widget>
             </item>
@@ -351,6 +344,19 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
+            <item row="8" column="0" colspan="3">
+             <widget class="Line" name="line_2">
+              <property name="frameShadow">
+               <enum>QFrame::Raised</enum>
+              </property>
+              <property name="lineWidth">
+               <number>5</number>
+              </property>
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+             </widget>
+            </item>
             <item row="7" column="0">
              <spacer name="verticalSpacer_23">
               <property name="orientation">
@@ -367,54 +373,14 @@ p, li { white-space: pre-wrap; }
               </property>
              </spacer>
             </item>
-            <item row="8" column="0" colspan="3">
-             <widget class="Line" name="line_2">
-              <property name="frameShadow">
-               <enum>QFrame::Raised</enum>
-              </property>
-              <property name="lineWidth">
-               <number>5</number>
-              </property>
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-             </widget>
-            </item>
-            <item row="10" column="0">
-             <widget class="QLabel" name="label_47">
+            <item row="4" column="0" colspan="2">
+             <widget class="QLabel" name="label_3">
               <property name="text">
-               <string>Gamma:</string>
+               <string>Generate and execute Plato input file:</string>
               </property>
              </widget>
             </item>
-            <item row="10" column="1">
-             <widget class="QLineEdit" name="gammaLineEdit">
-              <property name="autoFillBackground">
-               <bool>false</bool>
-              </property>
-              <property name="text">
-               <string>0.1</string>
-              </property>
-             </widget>
-            </item>
-            <item row="11" column="0" colspan="2">
-             <widget class="QPushButton" name="generateTransInputFileButton">
-              <property name="text">
-               <string>Generate Transmission Input File</string>
-              </property>
-             </widget>
-            </item>
-            <item row="12" column="0" colspan="2">
-             <widget class="QPushButton" name="executeTransButton">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-              <property name="text">
-               <string>Calculate transmission</string>
-              </property>
-             </widget>
-            </item>
-            <item row="13" column="0">
+            <item row="17" column="0">
              <spacer name="verticalSpacer_24">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
@@ -430,41 +396,48 @@ p, li { white-space: pre-wrap; }
               </property>
              </spacer>
             </item>
-            <item row="14" column="0" colspan="3">
-             <widget class="Line" name="line_3">
-              <property name="frameShadow">
-               <enum>QFrame::Raised</enum>
-              </property>
-              <property name="lineWidth">
-               <number>5</number>
-              </property>
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
+            <item row="15" column="0" colspan="2">
+             <widget class="QPushButton" name="generateTransInputFileButton">
+              <property name="text">
+               <string>Generate Transmission Input File</string>
               </property>
              </widget>
             </item>
-            <item row="16" column="0">
+            <item row="14" column="0">
+             <widget class="QLabel" name="label_47">
+              <property name="text">
+               <string>Gamma:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="14" column="1">
+             <widget class="QLineEdit" name="gammaLineEdit">
+              <property name="autoFillBackground">
+               <bool>false</bool>
+              </property>
+              <property name="text">
+               <string>0.1</string>
+              </property>
+             </widget>
+            </item>
+            <item row="16" column="0" colspan="2">
+             <widget class="QPushButton" name="executeTransButton">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="text">
+               <string>Calculate transmission</string>
+              </property>
+             </widget>
+            </item>
+            <item row="20" column="0">
              <widget class="QLabel" name="label_48">
               <property name="text">
                <string>Gamma</string>
               </property>
              </widget>
             </item>
-            <item row="16" column="1">
-             <widget class="QLineEdit" name="gammaLineEdit2">
-              <property name="text">
-               <string>0.1</string>
-              </property>
-             </widget>
-            </item>
-            <item row="17" column="0" colspan="2">
-             <widget class="QPushButton" name="generateCurrInputFileButton">
-              <property name="text">
-               <string>Generate Current Input File</string>
-              </property>
-             </widget>
-            </item>
-            <item row="19" column="0">
+            <item row="23" column="0">
              <spacer name="verticalSpacer_25">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
@@ -480,63 +453,89 @@ p, li { white-space: pre-wrap; }
               </property>
              </spacer>
             </item>
-            <item row="20" column="0" colspan="2">
+            <item row="20" column="1">
+             <widget class="QLineEdit" name="gammaLineEdit2">
+              <property name="text">
+               <string>0.1</string>
+              </property>
+             </widget>
+            </item>
+            <item row="21" column="0" colspan="2">
+             <widget class="QPushButton" name="generateCurrInputFileButton">
+              <property name="text">
+               <string>Generate Current Input File</string>
+              </property>
+             </widget>
+            </item>
+            <item row="18" column="0" colspan="3">
+             <widget class="Line" name="line_3">
+              <property name="frameShadow">
+               <enum>QFrame::Raised</enum>
+              </property>
+              <property name="lineWidth">
+               <number>5</number>
+              </property>
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+             </widget>
+            </item>
+            <item row="24" column="0" colspan="2">
              <widget class="QLabel" name="label_33">
               <property name="text">
                <string>Generate current vs. bias graph:</string>
               </property>
              </widget>
             </item>
-            <item row="21" column="0">
-             <widget class="QLabel" name="label_37">
-              <property name="text">
-               <string>Ref. Potential (eV)</string>
-              </property>
-             </widget>
-            </item>
-            <item row="21" column="1">
-             <widget class="QLineEdit" name="referenceLineEdit">
-              <property name="text">
-               <string>0</string>
-              </property>
-             </widget>
-            </item>
-            <item row="22" column="0">
+            <item row="26" column="0">
              <widget class="QLabel" name="label_44">
               <property name="text">
                <string>Max Bias (eV)</string>
               </property>
              </widget>
             </item>
-            <item row="22" column="1">
+            <item row="25" column="1">
+             <widget class="QLineEdit" name="referenceLineEdit">
+              <property name="text">
+               <string>0</string>
+              </property>
+             </widget>
+            </item>
+            <item row="25" column="0">
+             <widget class="QLabel" name="label_37">
+              <property name="text">
+               <string>Ref. Potential (eV)</string>
+              </property>
+             </widget>
+            </item>
+            <item row="26" column="1">
              <widget class="QLineEdit" name="biasLineEdit">
               <property name="text">
                <string>1</string>
               </property>
              </widget>
             </item>
-            <item row="23" column="0">
-             <widget class="QLabel" name="label_45">
-              <property name="text">
-               <string>Steps</string>
-              </property>
-             </widget>
-            </item>
-            <item row="23" column="1">
+            <item row="27" column="1">
              <widget class="QLineEdit" name="stepsLineEdit">
               <property name="text">
                <string>5</string>
               </property>
              </widget>
             </item>
-            <item row="24" column="0" colspan="2">
-             <widget class="QPushButton" name="executeCurrGraphButton">
-              <property name="text">
-               <string>Plot current vs. bias</string>
+            <item row="30" column="0" colspan="3">
+             <widget class="Line" name="line_5">
+              <property name="frameShadow">
+               <enum>QFrame::Raised</enum>
+              </property>
+              <property name="lineWidth">
+               <number>5</number>
+              </property>
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
               </property>
              </widget>
             </item>
-            <item row="25" column="0">
+            <item row="29" column="0">
              <spacer name="verticalSpacer_26">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
@@ -552,34 +551,38 @@ p, li { white-space: pre-wrap; }
               </property>
              </spacer>
             </item>
-            <item row="26" column="0" colspan="3">
-             <widget class="Line" name="line_5">
-              <property name="frameShadow">
-               <enum>QFrame::Raised</enum>
-              </property>
-              <property name="lineWidth">
-               <number>5</number>
-              </property>
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
+            <item row="28" column="0" colspan="2">
+             <widget class="QPushButton" name="executeCurrGraphButton">
+              <property name="text">
+               <string>Plot current vs. bias</string>
               </property>
              </widget>
             </item>
-            <item row="27" column="0" colspan="2">
+            <item row="27" column="0">
+             <widget class="QLabel" name="label_45">
+              <property name="text">
+               <string>Steps</string>
+              </property>
+             </widget>
+            </item>
+            <item row="31" column="0" colspan="2">
              <widget class="QLabel" name="label_4">
               <property name="text">
                <string>View and / or edit Plato input files:</string>
               </property>
              </widget>
             </item>
-            <item row="28" column="0" colspan="2">
-             <widget class="QPushButton" name="switchToInputFileTabButton">
+            <item row="22" column="0" colspan="2">
+             <widget class="QPushButton" name="executeCurrButton">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
               <property name="text">
-               <string>Switch to Input File tab</string>
+               <string>Calculate current </string>
               </property>
              </widget>
             </item>
-            <item row="29" column="0">
+            <item row="33" column="0">
              <spacer name="verticalSpacer_27">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
@@ -595,17 +598,21 @@ p, li { white-space: pre-wrap; }
               </property>
              </spacer>
             </item>
-            <item row="18" column="0" colspan="2">
-             <widget class="QPushButton" name="executeCurrButton">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
+            <item row="32" column="0" colspan="2">
+             <widget class="QPushButton" name="switchToInputFileTabButton">
               <property name="text">
-               <string>Calculate current </string>
+               <string>Switch to Input File tab</string>
               </property>
              </widget>
             </item>
-            <item row="9" column="0" colspan="3">
+            <item row="19" column="0" colspan="3">
+             <widget class="QLabel" name="label_35">
+              <property name="text">
+               <string>Calculate current across two terminals:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="13" column="0" colspan="3">
              <widget class="QLabel" name="label_34">
               <property name="text">
                <string>Calculate transmission across two terminals:</string>
@@ -615,12 +622,44 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="15" column="0" colspan="3">
-             <widget class="QLabel" name="label_35">
-              <property name="text">
-               <string>Calculate current across two terminals:</string>
+            <item row="12" column="0" colspan="2">
+             <widget class="Line" name="line_4">
+              <property name="frameShadow">
+               <enum>QFrame::Raised</enum>
+              </property>
+              <property name="lineWidth">
+               <number>5</number>
+              </property>
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
               </property>
              </widget>
+            </item>
+            <item row="9" column="0">
+             <widget class="QLabel" name="label_40">
+              <property name="text">
+               <string>Select Terminals:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="11" column="0">
+             <spacer name="verticalSpacer_29">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeType">
+               <enum>QSizePolicy::Fixed</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>10</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item row="10" column="0" colspan="2">
+             <widget class="QComboBox" name="terminalComboBox"/>
             </item>
            </layout>
           </widget>
